--- a/kontakt_de.html
+++ b/kontakt_de.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="da">
+<html lang="de">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
 
-    <meta name="author" content="Heidi Callesen, Johan Nybro Nielsen, Milla Anushree Nielsen, Patrick Koo Madsen">
+    <meta name="author" content="Heidi Callesen, Johan Nybro Nielsen, Milla Arushnee Nielsen, Patrick Koo Madsen">
 
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="css/style.css">
@@ -20,15 +20,15 @@
     <div class="gridwrapper">
         <header>
            <div class="lang">
-                <a href="kontakt_en.html"><img src="images/sprog_ikoner/icon_en.png" alt="Sprog ikon for EN" class="sprog1"></a>
-                <a href="kontakt_de.html"><img src="images/sprog_ikoner/icon_de.png" alt="Sprog ikon for DE" class="sprog2"></a>
+                <a href="index_en.html"><img src="images/sprog_ikoner/icon_en.png" alt="Sprog ikon for EN" class="sprog1"></a>
+                <a href="kontakt.html"><img src="images/sprog_ikoner/icon_da.png" alt="Sprog ikon for DA" class="sprog2"></a>
             </div>
             <nav class="grid-nav">
-                <a href="menu.html">Menu</a>
-                <a href="opskrifter.html">Opskrifter</a>
-                <a href="index.html" class="nohover"><img src="images/norsminde_fiskehus_logo.png" alt="Norsminde Fiskehusets Logo"></a>
-                <a href="om_os.html">Om os</a>
-                <a href="kontakt.html" class="active">Kontakt</a>
+                <a href="menu_de.html">Menü</a>
+                <a href="opskrifter_de.html">Rezepte</a>
+                <a href="index_de.html" class="nohover"><img src="images/norsminde_fiskehus_logo.png" alt="Norsminde Fiskehusets Logo"></a>
+                <a href="om_os_de.html">Über uns</a>
+                <a href="kontakt_de.html" class="active">Kontakt</a>
             </nav>
         </header>
 
@@ -36,8 +36,8 @@
         <section class=grid-content>
             <div class="kontakt findos_flexrow">
                 <div class="findos findos_flexcolumn">
-                    <h2>Her finder du os</h2>
-                    <p>Norsminde Fiskehus <br><br> Gl. Krovej 1A <br>8300 Odder </p>
+                    <h2>Hier finden Sie uns</h2>
+                    <p>Norsminde Fischhaus <br><br> Gl. Krovej 1A <br>8300 Odder </p>
                     <br>
                     <p>Telefon: 2555 5203</p>
                     <br>
@@ -46,10 +46,10 @@
                     <img src="images/fisk_pynt.png" alt="Pynte fisk" class="pyntefisk_pos6">
                 </div>
                 <div class="kontaktform findos_flexcolumn">
-                    <h3>Du kan kontakte os her uden for sæsonen</h3>
+                    <h3>Sie können uns außerhalb der Saison hier kontaktieren</h3>
                     <form action="action_page.php">
 
-                        <label for="fname">Navn</label>
+                        <label for="fname">Name</label>
                         <input type="text" id="fname" name="firstname">
 
                         <label for="lname">Email</label>
@@ -58,7 +58,7 @@
                         <label for="lname">Telefon</label>
                         <input type="text" id="phone" name="phone">
 
-                        <label for="subject">Emne</label>
+                        <label for="subject">Thema</label>
                         <textarea id="subject" name="subject" style="height:200px"></textarea>
 
                         <input type="submit" value="Send">
