--- a/menu_de.html
+++ b/menu_de.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html lang="da">
+<html lang="de">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
 
-    <meta name="author" content="Heidi Callesen, Johan Nybro Nielsen, Milla Anushree Nielsen, Patrick Koo Madsen">
+    <meta name="author" content="Heidi Callesen, Johan Nybro Nielsen, Milla Arushnee Nielsen, Patrick Koo Madsen">
 
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/fonts.css" type="text/css">
 
-    <title>Norsminde Fiskehus - Menu</title>
+    <title>Norsminde Fischhaus - Menü</title>
     <meta name="description" content="Norsminde Fiskehusets menukort, drikkevarer, salg af fisk">
 </head>
 
@@ -19,32 +19,32 @@
     <!-- NAV - Menubar -->
     <div class="gridwrapper">
         <header class="grid-header">
-           <div class="lang">
+            <div class="lang">
                 <a href="menu_en.html"><img src="images/sprog_ikoner/icon_en.png" alt="Sprog ikon for EN" class="sprog1"></a>
-                <a href="menu_de.html"><img src="images/sprog_ikoner/icon_de.png" alt="Sprog ikon for DE" class="sprog2"></a>
+                <a href="menu.html"><img src="images/sprog_ikoner/icon_da.png" alt="Sprog ikon for DA" class="sprog2"></a>
             </div>
             <nav class="grid-nav">
-                <a href="menu.html" class="active">Menu</a>
-                <a href="opskrifter.html">Opskrifter</a>
-                <a href="index.html" class="nohover"><img src="images/norsminde_fiskehus_logo.png" alt="Norsminde Fiskehusets Logo"></a>
-                <a href="om_os.html">Om os</a>
-                <a href="kontakt.html">Kontakt</a>
+                <a href="menu_de.html" class="active">Menü</a>
+                <a href="opskrifter_de.html">Rezepte</a>
+                <a href="index_de.html" class="nohover"><img src="images/norsminde_fiskehus_logo.png" alt="Norsminde Fiskehusets Logo"></a>
+                <a href="om_os_de.html">Über uns</a>
+                <a href="kontakt_de.html">Kontakt</a>
             </nav>
         </header>
 
         <!-- Content - Menukort 1 -->
         <section class="grid-content chalkboard">
-            <h2 class="menu-section-title">MENUKORT</h2>
+            <h2 class="menu-section-title">SPEISEKARTE</h2>
 
             <div id="menu-undertekst">
-                <p>Spring køen over, og bestil hjemmefra på +45 2555 5203 </p>
+                <p>Überspringen Sie die Warteschlange und bestellen Sie von zu Hause aus unter +45 2555 5203</p>
             </div>
 
             <div class="menu-body">
                 <div class="menu-section">
                     <div class="menu-item">
                         <div class="menu-item-name">
-                            1 stk. fiskefrikadelle eller 1 stk. filet
+                            1 Stück Fischfrei oder 1 Stück. Filet
                         </div>
                         <div class="menu-item-price">
                             15,-
@@ -52,7 +52,7 @@
                     </div>
                     <div class="menu-item">
                         <div class="menu-item-name">
-                            4 stk. frit valg
+                            4 Stück freie Wahl
                         </div>
                         <div class="menu-item-price">
                             50,-
@@ -62,28 +62,28 @@
                     <br>
                     <div class="menu-item">
                         <div class="menu-item-name">
-                            Norsminde lille menu
+                            Norsminde kleine Speisekarte
                         </div>
                         <div class="menu-item-price">
                             25,-
                         </div>
                         <div class="menu-item-description">
-                            1 fiskefrikadelle eller filet inkl. brød, smør og remoulade
+                            1 Fischfilet oder Filet inkl. Brot, Butter und Remoulade
                         </div>
                     </div>
                     <br>
                     <div class="menu-item">
                         <div class="menu-item-name">
-                            Norsminde stor menu
+                            Norsminde große Speisekarte
                         </div>
                         <div class="menu-item-price">
                             40,-
                         </div>
                         <div class="menu-item-description">
-                            2 fiskefrikadeller el. filet Inkl. brød, smør og remoulade
+                            2 Fischgerichte oder Strom. Filet inkl. Brot, Butter und Remoulade
                         </div>
                         <div class="menu-item-description">
-                            <b>inkl. stor pilsner eller et glas af husets vin</b>
+                            <b>inkl. großes Pils oder ein Glas Hauswein</b>
                         </div>
                         <div class="menu-item-price">
                             <b>75,-</b>
@@ -96,7 +96,7 @@
             <div class="menufloat">
                 <div class="menu-item">
                     <div class="menu-item-name">
-                        Fiskeplatte til 2
+                        Fischplatte für 2
                     </div>
                     <div class="menu-item-price">
                         195,-
@@ -105,7 +105,7 @@
                 <br>
                 <div class="menu-item">
                     <div class="menu-item-name">
-                        Norsminde Stjerne
+                        Norsminde Stern
                     </div>
                     <div class="menu-item-price">
                         95,-
@@ -113,7 +113,7 @@
                 </div>
                 <div class="menu-item">
                     <div class="menu-item-name">
-                        Fish and Chips
+                        Fisch und Chips
                     </div>
                     <div class="menu-item-price">
                         95,-
@@ -130,7 +130,7 @@
                 </div>
                 <div class="menu-item">
                     <div class="menu-item-name">
-                        Fiskeburger
+                        Fisch Burger
                     </div>
                     <div class="menu-item-price">
                         80,-
@@ -138,7 +138,7 @@
                 </div>
                 <div class="menu-item">
                     <div class="menu-item-name">
-                        Fiskeburger inkl. chips
+                        Anglerburger inkl. chips
                     </div>
                     <div class="menu-item-price">
                         95,-
@@ -146,7 +146,7 @@
                 </div>
                 <div class="menu-item">
                     <div class="menu-item-name">
-                        Børne fiskeburger inkl. chips
+                        Kinder Fischburger inkl. Kartoffelchips
                     </div>
                     <div class="menu-item-price">
                         65,-
@@ -154,7 +154,7 @@
                 </div>
                 <div class="menu-item">
                     <div class="menu-item-name">
-                        Peters varmrøget laksesalat
+                        Peters heiß geräucherter Lachssalat
                     </div>
                     <div class="menu-item-price">
                         95,-
@@ -162,32 +162,32 @@
                 </div>
             </div>
 
-           <!-- Content - Drikkevarer 1 -->
+            <!-- Content - Drikkevarer 1 -->
             <div class="drikkevarer">
-                <h2 class="menu-section-title">DRIKKEVARER</h2>
+                <h2 class="menu-section-title">GETRAENKE</h2>
                 <div class="menu-body">
                     <div class="menu-section">
                         <div class="menu-item">
                             <div class="menu-item-name">
-                                Fadøl
+                                Fassbier
                             </div>
 
                             <div class="menu-item-price">
-                                lille 25,- / stor 40,-
+                                Klein 25,- / groß 40,-
                             </div>
                         </div>
                         <div class="menu-item">
                             <div class="menu-item-name">
-                                Special øl
+                                Spezialbier
                             </div>
 
                             <div class="menu-item-price">
-                                lille 35,- / stor 50,-
+                                Klein 35,- / groß 50,-
                             </div>
                         </div>
                         <div class="menu-item">
                             <div class="menu-item-name">
-                                Øl flaske
+                                Bierflasche
                             </div>
 
                             <div class="menu-item-price">
@@ -196,7 +196,7 @@
                         </div>
                         <div class="menu-item">
                             <div class="menu-item-name">
-                                Alkoholfri øl
+                                Alkoholfreies Bier
                             </div>
 
                             <div class="menu-item-price">
@@ -205,7 +205,7 @@
                         </div>
                         <div class="menu-item">
                             <div class="menu-item-name">
-                                Cider
+                                Apfelwein
                             </div>
 
                             <div class="menu-item-price">
@@ -214,7 +214,7 @@
                         </div>
                         <div class="menu-item">
                             <div class="menu-item-name">
-                                Husets vin, glas
+                                Hauswein, Glas
                             </div>
 
                             <div class="menu-item-price">
@@ -223,7 +223,7 @@
                         </div>
                         <div class="menu-item">
                             <div class="menu-item-name">
-                                Husets vin, flaske
+                                Hauswein, Flasche
                             </div>
 
                             <div class="menu-item-price">
@@ -233,7 +233,7 @@
                         <br>
                         <div class="menu-item">
                             <div class="menu-item-name">
-                                Øko saft
+                                Öko-saft
                             </div>
                             <div class="menu-item-price">
                                 30,-
@@ -241,7 +241,7 @@
                         </div>
                         <div class="menu-item">
                             <div class="menu-item-name">
-                                Sodavand
+                                Soda
                             </div>
                             <div class="menu-item-price">
                                 25,-
@@ -249,7 +249,7 @@
                         </div>
                         <div class="menu-item">
                             <div class="menu-item-name">
-                                Vand
+                                Wasser
                             </div>
                             <div class="menu-item-price">
                                 15,-
@@ -257,13 +257,13 @@
                         </div>
                     </div>
                 </div>
-                
+
                 <!-- Content - Drikkevarer 2 -->
                 <div class="menufloat2">
                     <div class="menu-section">
                         <div class="menu-item">
                             <div class="menu-item-name">
-                                Sort kaffe eller espresso
+                                Schwarzer Kaffee oder Espresso
                             </div>
                             <div class="menu-item-price">
                                 20,-
@@ -271,7 +271,7 @@
                         </div>
                         <div class="menu-item">
                             <div class="menu-item-name">
-                                Kaffe latte
+                                Kaffee latte
                             </div>
                             <div class="menu-item-price">
                                 35,-
@@ -279,7 +279,7 @@
                         </div>
                         <div class="menu-item">
                             <div class="menu-item-name">
-                                Cappuccino
+                                Cappucino
                             </div>
                             <div class="menu-item-price">
                                 30,-
@@ -287,7 +287,7 @@
                         </div>
                         <div class="menu-item">
                             <div class="menu-item-name">
-                                Te
+                                Tee
                             </div>
                             <div class="menu-item-price">
                                 20,-
@@ -295,7 +295,7 @@
                         </div>
                         <div class="menu-item">
                             <div class="menu-item-name">
-                                Varm kakao med flødeskum
+                                Heißer Kakao mit Schlagsahne
                             </div>
                             <div class="menu-item-price">
                                 30,-
@@ -303,7 +303,7 @@
                         </div>
                         <div class="menu-item">
                             <div class="menu-item-name">
-                                Børne kakao med skumfidus
+                                Kinderkakao mit Schaumschaum
                             </div>
                             <div class="menu-item-price">
                                 20,-
@@ -317,21 +317,21 @@
         <!-- Aside - Salg af fisk -->
         <aside class="grid-aside">
             <div class="salg_af_fisk">
-                <h3>Salg af fisk</h3>
-                <p class="salg_info">Udover vores menukort, så tilbyder vi også følgende fisk samt tilbehør til at tage med hjem.</p>
+                <h3>Verkauf von Fisch</h3>
+                <p class="salg_info">Zusätzlich zu unserer Menükarte bieten wir auch folgende Fische sowie Accessoires zum Mitnehmen an.</p>
 
                 <br><br>
 
                 <div class="salg_fisk">
                     <ul>
-                        <li>Hel røget makrel pr. stk.</li>
-                        <li>Hjemmelavet rejesalat pr. 100 gram</li>
-                        <li>Jomfruhummer pr. 100 gram</li>
-                        <li>Varmrøget laks pr. 100 gram</li>
-                        <li>Røget laks i skiver pr. 100 gram</li>
-                        <li>Hjemmelavet krebsehalesalat pr. 100 gram</li>
-                        <li>Torskefilet pr. 100 gram</li>
-                        <li>Rødspættefilet pr. 100 gram</li>
+                        <li>Ganze geräucherte Makrele pro. Absatz.</li>
+                        <li>Hausgemachter Reissalat pro. 100 Gramm</li>
+                        <li>Jungfrau per. 100 Gramm</li>
+                        <li>Heiß geräucherter Lachs pro. 100 Gramm</li>
+                        <li>Räucherlachs in Scheiben pro. 100 Gramm</li>
+                        <li>Hausgemachter Krebsalsalat pro. 100 Gramm</li>
+                        <li>Kabeljaufilet per. 100 Gramm </li>
+                        <li>Schollenfilet per. 100 Gramm</li>
                     </ul>
 
                     <ul class="tidspunkter">
