--- a/om_os_de.html
+++ b/om_os_de.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html lang="da">
+<html lang="de">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
 
-    <meta name="author" content="Heidi Callesen, Johan Nybro Nielsen, Milla Anushree Nielsen, Patrick Koo Madsen">
+    <meta name="author" content="Heidi Callesen, Johan Nybro Nielsen, Milla Arushnee Nielsen, Patrick Koo Madsen">
 
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/fonts.css" type="text/css">
 
-    <title>Norsminde Fiskehus - Om os</title>
+    <title>Norsminde Fischhaus - Über uns</title>
     <meta name="description" content="Norsminde Fiskehusets historie, hvem er vi, værdier, mission">
 </head>
 
@@ -20,25 +20,25 @@
     <div class="gridwrapper">
         <header class="grid-header">
            <div class="lang">
-                <a href="om_os_en.html"><img src="images/sprog_ikoner/icon_en.png" alt="Sprog ikon for EN" class="sprog1"></a>
-                <a href="om_os_de.html"><img src="images/sprog_ikoner/icon_de.png" alt="Sprog ikon for DE" class="sprog2"></a>
+                <a href="index_en.html"><img src="images/sprog_ikoner/icon_en.png" alt="Sprog ikon for EN" class="sprog1"></a>
+                <a href="om_os.html"><img src="images/sprog_ikoner/icon_da.png" alt="Sprog ikon for DA" class="sprog2"></a>
             </div>
             <nav class="grid-nav">
-                <a href="menu.html">Menu</a>
-                <a href="opskrifter.html">Opskrifter</a>
-                <a href="index.html" class="nohover"><img src="images/norsminde_fiskehus_logo.png" alt="Norsminde Fiskehusets Logo"></a>
-                <a href="om_os.html" class="active">Om os</a>
-                <a href="kontakt.html">Kontakt</a>
+                <a href="menu_de.html">Menü</a>
+                <a href="opskrifter_de.html">Rezepte</a>
+                <a href="index_de.html" class="nohover"><img src="images/norsminde_fiskehus_logo.png" alt="Norsminde Fiskehusets Logo"></a>
+                <a href="om_os_de.html" class="active">Über uns</a>
+                <a href="kontakt_de.html">Kontakt</a>
             </nav>
         </header>
 
         <!-- Content - Historie -->
         <section class="grid-content">
             <div class="historie">
-                <h1>Historie</h1>
+                <h1>Geschichte</h1>
                 <div class="historie_row">
                     <div class="historie_column">
-                        <p>Norsminde Fiskehus har eksisteret over 60 år, med mange forskellige forpagtere. Fiskehuset er havnens perle, og er et populært spisested blandt de lokale. Der har altid været fokus på at servere frisk fisk og på de berømte fiskefrikadeller.<br><br> I år 2018 fik Fiskehuset en stor renovering samt en tilbyggelse til Fiskehuset. Der er nu plads til mange flere mennesker både inde og ude.</p>
+                        <p>Norsminde Fischhaus existiert seit über 60 Jahren mit vielen verschiedenen Mietern. Das Fischerhaus ist die Perle des Hafens und ist ein beliebtes Lokal unter den Einheimischen. Der Schwerpunkt lag immer auf frischem Fisch und den berühmten Fischfriktzellen.<br><br> Im Jahr 2018 erhielt Fiskehuset eine größere Renovierung und eine Erweiterung des Fiskehuset. Es gibt jetzt Platz für viele weitere Menschen sowohl innen als auch außen.</p>
                     </div>
                     <div class="historie_column">
                         <img src="images/om_os/nf_gamletid.jpg" alt="Et billede af Norsminde Fiskehus i gamle dage">
@@ -50,7 +50,7 @@
         <!-- Aside - Hvem er vi? -->
         <aside class="grid-aside">
             <div class="hvemervi">
-                <h1>Hvem er vi?</h1>
+                <h1>Wer sind wir?</h1>
 
                 <div class="hvemervirow">
                     <div class="hvemervicolumn">
@@ -63,10 +63,10 @@
 
                 <div class="hvemervirow">
                     <div class="hvemervicolumn">
-                        <p><b>Signe Graham</b> er 38 år, og er en af forpagterne af Norsminde Fiskehus. Hun er ufaglært tjener, og hjælper til dagligt på havnen. Inden overtagelse af Norsminde Fiskehus ejede hun sammen med sin mand, Rhodi Graham en lille café og et bageri i Holland. </p>
+                        <p><b>Signe Graham</b> ist 38 Jahre alt und gehört zu den Mietern von Norsminde Fishing House. Sie ist eine ungelernte Kellnerin und hilft jeden Tag am Hafen. Bevor sie das Norsminde Fish House übernahm, besaß sie zusammen mit Rhodi Graham ein kleines Café und eine Bäckerei in Holland. </p>
                     </div>
                     <div class="hvemervicolumn">
-                        <p><b>Rhodi Graham</b> er 40 år, og stammer oprindeligt fra Australien. Han er uddannet kok, og sørger til dagligt for de hjemmelavede produkter som Fiskehuset tilbyder. Sammen med hans kone, Signe Graham hjalp han med at bestyrer cafeen og bageriet i Holland.</p>
+                        <p><b>Rhodi Graham</b> ist 40 Jahre alt und stammt ursprünglich aus Australien. Er ist ausgebildeter Koch und bietet täglich hausgemachte Produkte an, die das Fischhaus anbietet. Zusammen mit seiner Frau, Signe Graham, half er das Café und die Bäckerei in Holland zu verwalten.</p>
                     </div>
                 </div>
             </div>
@@ -74,11 +74,11 @@
             <!-- Værdier og Mission -->
             <div class="grid-gallery">
                 <div class="valuesmission">
-                    <h3>Vores værdier og mission;</h3>
+                    <h3>Unsere Werte und Mission;</h3>
 
-                    <p>"Vi går ind for høj kvalitet til fornuftige priser, det er det vigtigste. Vi ryger selv vores fisk, bager selv vores brød og remouladen bliver lavet fra bunden. Vi kæler for gode råvarer, og det kan man smage i det færdige produkt.</p>
+                    <p>"Wir sind für eine hohe Qualität zu vernünftigen Preisen, das ist das Wichtigste. Wir rauchen unseren Fisch, backen unser Brot und die Remoulade wird aus dem Boden gemacht. Wir verarschen für gute Zutaten, und Sie können das fertige Produkt schmecken.</p>
                     <br>
-                    <p>Fiskehuset skal være et sted, hvor man kan komme og nyde livet på havnen og slappe af med en lækker tallerken mad og en øl eller et glas vin. Der skal være plads til børn og voksne, man skal kunne få en hurtig fiskefrikadelle med hjem eller nyde en treretters menu. Maden vil være både klassisk og moderne, dansk og international. Der skal være noget for alle."</p>
+                    <p>Das Fischerhaus muss ein Ort sein, an dem Sie das Leben am Hafen genießen und sich bei einem köstlichen Teller mit Essen und einem Bier oder einem Glas Wein entspannen können. Es muss Platz für Kinder und Erwachsene geben, man sollte in der Lage sein, einen schnellen Fisch zu Hause zu fangen oder ein Drei-Gänge-Menü zu genießen. Das Essen wird sowohl klassisch als auch modern, dänisch und international sein. Da muss für jeden etwas dabei sein."</p>
 
                     <span>- Signe Graham</span>
                     <img src="images/fisk_pynt.png" alt="Pynte fisk" class="pyntefisk_pos3">
