--- a/opskrifter.html
+++ b/opskrifter.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
 
-    <meta name="author" content="Heidi Callesen, Johan Nybro Nielsen, Milla Arushnee Nielsen, Patrick Koo Madsen">
+    <meta name="author" content="Heidi Callesen, Johan Nybro Nielsen, Milla Anushree Nielsen, Patrick Koo Madsen">
 
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <link href="css/lightbox.css" rel="stylesheet">
@@ -20,6 +20,10 @@
     <!-- NAV - Menubar -->
     <div class="gridwrapper">
         <header class="grid-header">
+           <div class="lang">
+                <a href="opskrifter_en.html"><img src="images/sprog_ikoner/icon_en.png" alt="Sprog ikon for EN" class="sprog1"></a>
+                <a href="opskrifter_de.html"><img src="images/sprog_ikoner/icon_de.png" alt="Sprog ikon for DE" class="sprog2"></a>
+            </div>
             <nav class="grid-nav">
                 <a href="menu.html">Menu</a>
                 <a href="opskrifter.html" class="active">Opskrifter</a>
