--- a/menu_en.html
+++ b/menu_en.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html lang="da">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
 
-    <meta name="author" content="Heidi Callesen, Johan Nybro Nielsen, Milla Anushree Nielsen, Patrick Koo Madsen">
+    <meta name="author" content="Heidi Callesen, Johan Nybro Nielsen, Milla Arushnee Nielsen, Patrick Koo Madsen">
 
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/fonts.css" type="text/css">
 
-    <title>Norsminde Fiskehus - Menu</title>
+    <title>Norsminde Fishing House - Menu</title>
     <meta name="description" content="Norsminde Fiskehusets menukort, drikkevarer, salg af fisk">
 </head>
 
@@ -20,31 +20,31 @@
     <div class="gridwrapper">
         <header class="grid-header">
            <div class="lang">
-                <a href="menu_en.html"><img src="images/sprog_ikoner/icon_en.png" alt="Sprog ikon for EN" class="sprog1"></a>
+                <a href="menu.html"><img src="images/sprog_ikoner/icon_da.png" alt="Sprog ikon for DA" class="sprog1"></a>
                 <a href="menu_de.html"><img src="images/sprog_ikoner/icon_de.png" alt="Sprog ikon for DE" class="sprog2"></a>
             </div>
             <nav class="grid-nav">
-                <a href="menu.html" class="active">Menu</a>
-                <a href="opskrifter.html">Opskrifter</a>
-                <a href="index.html" class="nohover"><img src="images/norsminde_fiskehus_logo.png" alt="Norsminde Fiskehusets Logo"></a>
-                <a href="om_os.html">Om os</a>
-                <a href="kontakt.html">Kontakt</a>
+                <a href="menu_en.html" class="active">Menu</a>
+                <a href="opskrifter_en.html">Recipes</a>
+                <a href="index_en.html" class="nohover"><img src="images/norsminde_fiskehus_logo.png" alt="Norsminde Fiskehusets Logo"></a>
+                <a href="om_os_en.html">About us</a>
+                <a href="kontakt_en.html">Contact</a>
             </nav>
         </header>
 
         <!-- Content - Menukort 1 -->
         <section class="grid-content chalkboard">
-            <h2 class="menu-section-title">MENUKORT</h2>
+            <h2 class="menu-section-title">MENU</h2>
 
             <div id="menu-undertekst">
-                <p>Spring køen over, og bestil hjemmefra på +45 2555 5203 </p>
+                <p>Skip the queue and order from house at +45 2555 5203 </p>
             </div>
 
             <div class="menu-body">
                 <div class="menu-section">
                     <div class="menu-item">
                         <div class="menu-item-name">
-                            1 stk. fiskefrikadelle eller 1 stk. filet
+                            1 pcs. Fish Cake or 1 pcs. Fish Fillet
                         </div>
                         <div class="menu-item-price">
                             15,-
@@ -52,7 +52,7 @@
                     </div>
                     <div class="menu-item">
                         <div class="menu-item-name">
-                            4 stk. frit valg
+                            4 pcs. free choice
                         </div>
                         <div class="menu-item-price">
                             50,-
@@ -62,28 +62,28 @@
                     <br>
                     <div class="menu-item">
                         <div class="menu-item-name">
-                            Norsminde lille menu
+                            Norsminde small menu
                         </div>
                         <div class="menu-item-price">
                             25,-
                         </div>
                         <div class="menu-item-description">
-                            1 fiskefrikadelle eller filet inkl. brød, smør og remoulade
+                            1 Fish Cake or Fillet incl. bread, butter and remoulade
                         </div>
                     </div>
                     <br>
                     <div class="menu-item">
                         <div class="menu-item-name">
-                            Norsminde stor menu
+                            Norsminde big menu
                         </div>
                         <div class="menu-item-price">
                             40,-
                         </div>
                         <div class="menu-item-description">
-                            2 fiskefrikadeller el. filet Inkl. brød, smør og remoulade
+                            2 Fish Cakes or Fillets incl. bread, butter and remoulade
                         </div>
                         <div class="menu-item-description">
-                            <b>inkl. stor pilsner eller et glas af husets vin</b>
+                            <b>Incl. 1 large beer or a glass of the house wine</b>
                         </div>
                         <div class="menu-item-price">
                             <b>75,-</b>
@@ -96,7 +96,7 @@
             <div class="menufloat">
                 <div class="menu-item">
                     <div class="menu-item-name">
-                        Fiskeplatte til 2
+                        Fish plate for 2
                     </div>
                     <div class="menu-item-price">
                         195,-
@@ -105,7 +105,7 @@
                 <br>
                 <div class="menu-item">
                     <div class="menu-item-name">
-                        Norsminde Stjerne
+                        Norsminde Star
                     </div>
                     <div class="menu-item-price">
                         95,-
@@ -121,7 +121,7 @@
                 </div>
                 <div class="menu-item">
                     <div class="menu-item-name">
-                        Chips inkl. sauce
+                        Chips incl. sauce
                     </div>
 
                     <div class="menu-item-price">
@@ -130,7 +130,7 @@
                 </div>
                 <div class="menu-item">
                     <div class="menu-item-name">
-                        Fiskeburger
+                        Fish Burger
                     </div>
                     <div class="menu-item-price">
                         80,-
@@ -138,7 +138,7 @@
                 </div>
                 <div class="menu-item">
                     <div class="menu-item-name">
-                        Fiskeburger inkl. chips
+                        Fish Burger incl. chips
                     </div>
                     <div class="menu-item-price">
                         95,-
@@ -146,7 +146,7 @@
                 </div>
                 <div class="menu-item">
                     <div class="menu-item-name">
-                        Børne fiskeburger inkl. chips
+                        Kids Fish Burger incl. chips
                     </div>
                     <div class="menu-item-price">
                         65,-
@@ -154,7 +154,7 @@
                 </div>
                 <div class="menu-item">
                     <div class="menu-item-name">
-                        Peters varmrøget laksesalat
+                        Peters hot-smoked salmon salad
                     </div>
                     <div class="menu-item-price">
                         95,-
@@ -164,30 +164,30 @@
 
            <!-- Content - Drikkevarer 1 -->
             <div class="drikkevarer">
-                <h2 class="menu-section-title">DRIKKEVARER</h2>
+                <h2 class="menu-section-title">BEVERAGES</h2>
                 <div class="menu-body">
                     <div class="menu-section">
                         <div class="menu-item">
                             <div class="menu-item-name">
-                                Fadøl
+                                Draft Beer
                             </div>
 
                             <div class="menu-item-price">
-                                lille 25,- / stor 40,-
+                                Small 25,- / Large 40,-
                             </div>
                         </div>
                         <div class="menu-item">
                             <div class="menu-item-name">
-                                Special øl
+                                Special Beer
                             </div>
 
                             <div class="menu-item-price">
-                                lille 35,- / stor 50,-
+                                Small 35,- / Large 50,-
                             </div>
                         </div>
                         <div class="menu-item">
                             <div class="menu-item-name">
-                                Øl flaske
+                                Beer on bottle
                             </div>
 
                             <div class="menu-item-price">
@@ -195,8 +195,7 @@
                             </div>
                         </div>
                         <div class="menu-item">
-                            <div class="menu-item-name">
-                                Alkoholfri øl
+                            <div class="menu-item-name">Alcohol-free Beer
                             </div>
 
                             <div class="menu-item-price">
@@ -214,7 +213,7 @@
                         </div>
                         <div class="menu-item">
                             <div class="menu-item-name">
-                                Husets vin, glas
+                                Wine of the house, glass
                             </div>
 
                             <div class="menu-item-price">
@@ -223,7 +222,7 @@
                         </div>
                         <div class="menu-item">
                             <div class="menu-item-name">
-                                Husets vin, flaske
+                                Wine of the house, bottle
                             </div>
 
                             <div class="menu-item-price">
@@ -233,7 +232,7 @@
                         <br>
                         <div class="menu-item">
                             <div class="menu-item-name">
-                                Øko saft
+                                Organic Lemonade
                             </div>
                             <div class="menu-item-price">
                                 30,-
@@ -241,7 +240,7 @@
                         </div>
                         <div class="menu-item">
                             <div class="menu-item-name">
-                                Sodavand
+                                Soda
                             </div>
                             <div class="menu-item-price">
                                 25,-
@@ -249,7 +248,7 @@
                         </div>
                         <div class="menu-item">
                             <div class="menu-item-name">
-                                Vand
+                                Water
                             </div>
                             <div class="menu-item-price">
                                 15,-
@@ -263,7 +262,7 @@
                     <div class="menu-section">
                         <div class="menu-item">
                             <div class="menu-item-name">
-                                Sort kaffe eller espresso
+                                Black Coffee or Espresso
                             </div>
                             <div class="menu-item-price">
                                 20,-
@@ -271,15 +270,14 @@
                         </div>
                         <div class="menu-item">
                             <div class="menu-item-name">
-                                Kaffe latte
+                                Coffee Latte
                             </div>
                             <div class="menu-item-price">
                                 35,-
                             </div>
                         </div>
                         <div class="menu-item">
-                            <div class="menu-item-name">
-                                Cappuccino
+                            <div class="menu-item-name">Cappuccino
                             </div>
                             <div class="menu-item-price">
                                 30,-
@@ -287,7 +285,7 @@
                         </div>
                         <div class="menu-item">
                             <div class="menu-item-name">
-                                Te
+                                Tea
                             </div>
                             <div class="menu-item-price">
                                 20,-
@@ -295,7 +293,7 @@
                         </div>
                         <div class="menu-item">
                             <div class="menu-item-name">
-                                Varm kakao med flødeskum
+                                Hot Chocolate with whipped cream
                             </div>
                             <div class="menu-item-price">
                                 30,-
@@ -303,7 +301,7 @@
                         </div>
                         <div class="menu-item">
                             <div class="menu-item-name">
-                                Børne kakao med skumfidus
+                                Kids Hot Chocolate with marshmallows
                             </div>
                             <div class="menu-item-price">
                                 20,-
@@ -317,21 +315,21 @@
         <!-- Aside - Salg af fisk -->
         <aside class="grid-aside">
             <div class="salg_af_fisk">
-                <h3>Salg af fisk</h3>
-                <p class="salg_info">Udover vores menukort, så tilbyder vi også følgende fisk samt tilbehør til at tage med hjem.</p>
+                <h3>Fish Sale</h3>
+                <p class="salg_info">In addition to our menu card, we also offer the following fish as well, as side dishes to bring home.</p>
 
                 <br><br>
 
                 <div class="salg_fisk">
                     <ul>
-                        <li>Hel røget makrel pr. stk.</li>
-                        <li>Hjemmelavet rejesalat pr. 100 gram</li>
-                        <li>Jomfruhummer pr. 100 gram</li>
-                        <li>Varmrøget laks pr. 100 gram</li>
-                        <li>Røget laks i skiver pr. 100 gram</li>
-                        <li>Hjemmelavet krebsehalesalat pr. 100 gram</li>
-                        <li>Torskefilet pr. 100 gram</li>
-                        <li>Rødspættefilet pr. 100 gram</li>
+                        <li>Smoked Mackerel a piece</li>
+                        <li>Homemade shrimp salad per 100 grams</li>
+                        <li>Norway Lobster per 100 grams</li>
+                        <li>Hot-smoked Salmon per 100 grams</li>
+                        <li>Smoked salmon in pieces per 100 grams/li>
+                        <li>Homemade crayfish tal salad per 100 grams</li>
+                        <li>Cod Fillet per 100 grams</li>
+                        <li>Plaice Fillet</li>
                     </ul>
 
                     <ul class="tidspunkter">
