--- a/om_os_en.html
+++ b/om_os_en.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html lang="da">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
 
-    <meta name="author" content="Heidi Callesen, Johan Nybro Nielsen, Milla Anushree Nielsen, Patrick Koo Madsen">
+    <meta name="author" content="Heidi Callesen, Johan Nybro Nielsen, Milla Arushnee Nielsen, Patrick Koo Madsen">
 
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/fonts.css" type="text/css">
 
-    <title>Norsminde Fiskehus - Om os</title>
+    <title>Norsminde Fishing House - About us</title>
     <meta name="description" content="Norsminde Fiskehusets historie, hvem er vi, værdier, mission">
 </head>
 
@@ -20,25 +20,25 @@
     <div class="gridwrapper">
         <header class="grid-header">
            <div class="lang">
-                <a href="om_os_en.html"><img src="images/sprog_ikoner/icon_en.png" alt="Sprog ikon for EN" class="sprog1"></a>
+                <a href="om_os.html"><img src="images/sprog_ikoner/icon_da.png" alt="Sprog ikon for DA" class="sprog1"></a>
                 <a href="om_os_de.html"><img src="images/sprog_ikoner/icon_de.png" alt="Sprog ikon for DE" class="sprog2"></a>
             </div>
             <nav class="grid-nav">
-                <a href="menu.html">Menu</a>
-                <a href="opskrifter.html">Opskrifter</a>
-                <a href="index.html" class="nohover"><img src="images/norsminde_fiskehus_logo.png" alt="Norsminde Fiskehusets Logo"></a>
-                <a href="om_os.html" class="active">Om os</a>
-                <a href="kontakt.html">Kontakt</a>
+                <a href="menu_en.html">Menu</a>
+                <a href="opskrifter_en.html">Recipes</a>
+                <a href="index_en.html" class="nohover"><img src="images/norsminde_fiskehus_logo.png" alt="Norsminde Fiskehusets Logo"></a>
+                <a href="om_os_en.html" class="active">About us</a>
+                <a href="kontakt_en.html">Contact</a>
             </nav>
         </header>
 
         <!-- Content - Historie -->
         <section class="grid-content">
             <div class="historie">
-                <h1>Historie</h1>
+                <h1>History</h1>
                 <div class="historie_row">
                     <div class="historie_column">
-                        <p>Norsminde Fiskehus har eksisteret over 60 år, med mange forskellige forpagtere. Fiskehuset er havnens perle, og er et populært spisested blandt de lokale. Der har altid været fokus på at servere frisk fisk og på de berømte fiskefrikadeller.<br><br> I år 2018 fik Fiskehuset en stor renovering samt en tilbyggelse til Fiskehuset. Der er nu plads til mange flere mennesker både inde og ude.</p>
+                        <p>Norsminde Fishing House has existed for over 60 years, with many different tenants. The fishing house is the pearl of the harbor and is a popular eatery among the locals. There has always been a focus on serving fresh fish and the famous fish cakes.<br><br> In 2018, Fiskehuset received a major renovation and an extension to the restaurant. There is now room for more people both inside and out.</p>
                     </div>
                     <div class="historie_column">
                         <img src="images/om_os/nf_gamletid.jpg" alt="Et billede af Norsminde Fiskehus i gamle dage">
@@ -50,7 +50,7 @@
         <!-- Aside - Hvem er vi? -->
         <aside class="grid-aside">
             <div class="hvemervi">
-                <h1>Hvem er vi?</h1>
+                <h1>Who are we?</h1>
 
                 <div class="hvemervirow">
                     <div class="hvemervicolumn">
@@ -63,10 +63,10 @@
 
                 <div class="hvemervirow">
                     <div class="hvemervicolumn">
-                        <p><b>Signe Graham</b> er 38 år, og er en af forpagterne af Norsminde Fiskehus. Hun er ufaglært tjener, og hjælper til dagligt på havnen. Inden overtagelse af Norsminde Fiskehus ejede hun sammen med sin mand, Rhodi Graham en lille café og et bageri i Holland. </p>
+                        <p><b>Signe Graham</b> is 38 years old and is one of the tenants of Norsminde Fishing House. She is an unskilled waiter, and helps every day at the harbor. Before taking over the Norsminde Fish House, she and Rhodi Graham owned a small café and a bakery in Holland.</p>
                     </div>
                     <div class="hvemervicolumn">
-                        <p><b>Rhodi Graham</b> er 40 år, og stammer oprindeligt fra Australien. Han er uddannet kok, og sørger til dagligt for de hjemmelavede produkter som Fiskehuset tilbyder. Sammen med hans kone, Signe Graham hjalp han med at bestyrer cafeen og bageriet i Holland.</p>
+                        <p><b>Rhodi Graham</b> is 40 years old and originally from Australia. He is a trained chef, and provides daily for the home-made products that Fiskehuset offers. Together with his wife, Signe Graham, he helped manage the cafe and bakery in Holland.</p>
                     </div>
                 </div>
             </div>
@@ -74,11 +74,11 @@
             <!-- Værdier og Mission -->
             <div class="grid-gallery">
                 <div class="valuesmission">
-                    <h3>Vores værdier og mission;</h3>
+                    <h3>Our values and mission;</h3>
 
-                    <p>"Vi går ind for høj kvalitet til fornuftige priser, det er det vigtigste. Vi ryger selv vores fisk, bager selv vores brød og remouladen bliver lavet fra bunden. Vi kæler for gode råvarer, og det kan man smage i det færdige produkt.</p>
+                    <p>"We are in favor of high quality at reasonable prices, that is the most important thing. We smoke our fish, bake our bread and the remoulade is made from the bottom. We are passionate about finding good ingredients, and you can taste that in the finished product.</p>
                     <br>
-                    <p>Fiskehuset skal være et sted, hvor man kan komme og nyde livet på havnen og slappe af med en lækker tallerken mad og en øl eller et glas vin. Der skal være plads til børn og voksne, man skal kunne få en hurtig fiskefrikadelle med hjem eller nyde en treretters menu. Maden vil være både klassisk og moderne, dansk og international. Der skal være noget for alle."</p>
+                    <p>The fisherman's house must be a place to come and enjoy life at the harbor and relax with a delicious plate of food and a beer or glass of wine. There must be room for children and adults, one should be able to get a quick fish cake to take home or enjoy a three course menu. The food will be both classic and modern, Danish and international. There must be something for everyone. "</p>
 
                     <span>- Signe Graham</span>
                     <img src="images/fisk_pynt.png" alt="Pynte fisk" class="pyntefisk_pos3">
